its ready after check